<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.cardview.widget.CardView
            android:id="@+id/login_image"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            app:cardElevation="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="250dp"
                android:layout_marginTop="16dp"
                android:scaleType="centerCrop"
                android:layout_marginHorizontal="20dp"
                android:src="@drawable/p" />

        </androidx.cardview.widget.CardView>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/welcome_to_satalment"
            android:textColor="@color/black"
            android:textSize="18dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/filledTextEmail"
            app:layout_constraintTop_toBottomOf="@+id/login_image">

        </androidx.appcompat.widget.AppCompatTextView>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/filledTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_email_id"
            app:startIconDrawable="@drawable/email"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="25dp"
            app:layout_constraintTop_toBottomOf="@+id/welcome">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                android:textSize="14sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/filledTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_password"
            app:startIconDrawable="@drawable/lock"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="25dp"
            app:layout_constraintTop_toBottomOf="@+id/filledTextEmail">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                android:textSize="14sp"
                android:drawableEnd="@drawable/view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


        </com.google.android.material.textfield.TextInputLayout>


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/forget_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            android:layout_marginTop="16dp"
            android:gravity="end"
            android:textSize="14sp"
            android:text="@string/forget_password"
            app:layout_constraintEnd_toEndOf="@+id/filledTextPassword"
            app:layout_constraintTop_toBottomOf="@+id/filledTextPassword" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btn_Login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/comon_button_background"
            android:gravity="center"
            android:padding="14dp"
            android:text="@string/log_in"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/forget_password"
            app:textAllCaps="false"/>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_Login">


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/dont_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/don_t_have_an_account"
                android:textSize="14dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/create_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/create_account"
                android:textColor="#3e3eb0"
                android:textSize="14dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/dont_account"
                app:layout_constraintTop_toTopOf="@+id/dont_account" />


        </androidx.constraintlayout.widget.ConstraintLayout>



    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>

