<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/photoTab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:visibility="visible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tabIndicator="@null">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/photos" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/albums" />

        </com.google.android.material.tabs.TabLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvAlbumPhotoSeeMore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="10dp"
            android:drawableTint="@color/black"
            android:text="@string/see_more"
            android:textColor="@color/app_color"
            android:textSize="11sp"
            android:visibility="visible"
            app:fontFamily="@font/poppins"
            app:layout_constraintBottom_toBottomOf="@+id/photoTab"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/photoTab" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvPhotoAlbumData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:visibility="visible"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintStart_toStartOf="@+id/photoTab"
            app:layout_constraintTop_toBottomOf="@+id/photoTab"
            tools:itemCount="5" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>