<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.Authentication.FragmentSignUp">


    <include layout="@layout/common_toolbar"
        android:id="@+id/toolbar"/>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar">


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/filledTextName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:hint="@string/first_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/filledTextLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:hint="@string/last_name"
                app:layout_constraintTop_toBottomOf="@+id/filledTextName">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etLastName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/filledTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/email"
                app:layout_constraintTop_toBottomOf="@+id/filledTextLastName"
                app:startIconDrawable="@drawable/email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp" />

            </com.google.android.material.textfield.TextInputLayout>


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender"
                android:layout_marginTop="10dp"
                android:textSize="16dp"
                app:layout_constraintStart_toStartOf="@+id/filledTextEmail"
                app:layout_constraintTop_toBottomOf="@+id/filledTextEmail" />


            <RadioGroup
                android:id="@+id/radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="@+id/gender"
                app:layout_constraintTop_toBottomOf="@+id/gender">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:weightSum="3">

                    <RadioButton
                        android:id="@+id/rdmale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/male"
                        android:textColor="@color/black"
                        android:theme="@style/checkbox"
                        android:layout_weight="1"
                        app:layout_constraintStart_toStartOf="@+id/gender"
                        app:layout_constraintTop_toBottomOf="@+id/gender" />


                    <RadioButton
                        android:id="@+id/rdFamel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/female"
                        android:layout_weight="1"
                        android:textColor="@color/black"
                        android:theme="@style/checkbox"
                        app:layout_constraintBottom_toBottomOf="@+id/rdmale"
                        app:layout_constraintEnd_toStartOf="@+id/radioButton2"
                        app:layout_constraintStart_toEndOf="@+id/rdmale"
                        app:layout_constraintTop_toBottomOf="@+id/gender" />


                    <RadioButton
                        android:id="@+id/rdOthers"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/others"
                        android:layout_weight="1"
                        android:textColor="@color/black"
                        android:theme="@style/checkbox"
                        app:layout_constraintBottom_toBottomOf="@+id/radioButton"
                        app:layout_constraintEnd_toEndOf="@+id/filledTextEmail"
                        app:layout_constraintTop_toTopOf="@+id/radioButton" />


                </LinearLayout>


            </RadioGroup>


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/appCompatTextView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/date_of_birth"
                android:textSize="12sp"
                app:layout_constraintBottom_toTopOf="@+id/view"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/radio_group" />


            <Spinner
                android:id="@+id/spDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:entries="@array/date"
                app:layout_constraintBottom_toBottomOf="@+id/appCompatTextView4"
                app:layout_constraintStart_toEndOf="@+id/appCompatTextView4"
                app:layout_constraintTop_toBottomOf="@+id/appCompatTextView4" />


            <Spinner
                android:id="@+id/spMonth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/date"
                app:layout_constraintBottom_toBottomOf="@+id/spDate"
                app:layout_constraintStart_toEndOf="@+id/spDate"
                app:layout_constraintTop_toTopOf="@+id/spDate" />

            <Spinner
                android:id="@+id/spYear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/date"
                app:layout_constraintBottom_toBottomOf="@+id/spMonth"
                app:layout_constraintStart_toEndOf="@+id/spMonth"
                app:layout_constraintTop_toTopOf="@+id/spMonth" />

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:background="#DCD6D6"
                app:layout_constraintTop_toBottomOf="@id/spYear" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/filledTextcollege"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/add_school_college"
                app:layout_constraintTop_toBottomOf="@+id/spYear">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etschoolcollege"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp" />

            </com.google.android.material.textfield.TextInputLayout>



            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/filledTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:hint="Create Password"
                app:startIconDrawable="@drawable/lock"
                app:layout_constraintTop_toBottomOf="@+id/filledTextcollege">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/view"
                    android:textSize="14sp" />

            </com.google.android.material.textfield.TextInputLayout>


            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/tmcheckbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:theme="@style/checkbox"
                app:layout_constraintStart_toStartOf="@+id/filledTextPassword"
                app:layout_constraintTop_toBottomOf="@+id/filledTextPassword" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tmcondition"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:maxLines="2"
                android:ellipsize="end"
                android:maxEms="16"
                android:fontFamily="@font/poppins"
                android:textColor="@color/app_color"
                android:text="@string/i_agree_to_the_terms_amp_condition_and_privacy_policy_of_this_application"
                app:layout_constraintBottom_toBottomOf="@+id/tmcheckbox"
                app:layout_constraintStart_toEndOf="@+id/tmcheckbox"
                app:layout_constraintTop_toTopOf="@+id/tmcheckbox"
                />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/btn_crate_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="32dp"
                android:background="@drawable/comon_button_background"
                android:gravity="center"
                android:padding="14dp"
                android:text="@string/create_account"
                android:textColor="@color/white"
                app:layout_constraintTop_toBottomOf="@+id/tmcondition"
                app:textAllCaps="false"/>




        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>


</layout>